spacing fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -12,14 +12,14 @@ h2 {
 
 
 h2 {
-  /* margin-block-start: 2em; */
+  margin-block-start: 2em;
   margin-block-end: 0;
 }
 
-p {
+p,
+li {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin-block-start: 0.75em;
-  margin-block-end: 2em;
 }
 
 .title {
@@ -35,6 +35,6 @@ p {
 .content {
   background-color: white;
   margin: 50px 10% 20px;
-  padding: 20px 50px 20px;
+  padding: 10px 50px 30px;
   border: 1px solid darkgray;
 }
